# rgen

./: Cargo.toml  README.md  VERIFICATION.md  index.html
.github/workflows/: ci.yml  marketplace.yml  pages-simple.yml  security-audit.yml
cli/: Cargo.toml
ggen-ai/: Cargo.toml
ggen-core/: Cargo.toml
ggen-mcp/: Cargo.toml
registry/: packages.toml
utils/: Cargo.toml
