[package]
name = "ggen-cli-lib"
version = "1.0.0"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
description = "CLI interface for ggen"
edition = "2021"
license = "MIT"
repository = "https://github.com/seanchatmangpt/ggen"
readme = "README.md"
keywords = ["cli", "code-generation", "rdf", "templates"]
categories = ["development-tools", "command-line-utilities"]

[lints.clippy]
multiple_crate_versions = "allow"

[dependencies]
anyhow = "1.0"
ggen-utils = { path = "../utils", version = "1.0.0" }
ggen-core = { path = "../ggen-core", version = "1.0.0" }
ggen-ai = { path = "../ggen-ai", version = "1.0.0" }
clap_complete = "4.5.50"
sha2 = "0.10"
tera = "1.0"
dotenvy = "0.15"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
dirs = "5.0"
oxigraph = "0.5"
walkdir = "2.0"
serde_yaml = "0.9"
rayon = "1.8"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
genai = "0.4"

[features]
default = []
live-llm-tests = [] # Opt-in for live LLM integration tests

[dependencies.clap]
version = "4.5.37"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
mockall = "0.13"                                  # London TDD mocking framework
fake = { version = "2.9", features = ["derive"] } # Fake data generation
tempfile = "3.8"                                  # Temporary files/directories for testing
