[package]
name = "ggen-core"
version = "1.0.0"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
description = "Core graph-aware code generation engine"
edition = "2021"
license = "MIT"
repository = "https://github.com/seanchatmangpt/ggen"
readme = "README.md"
keywords = ["cli", "code-generation", "rdf", "templates"]
categories = ["development-tools", "command-line-utilities"]

[lints.clippy]
multiple_crate_versions = "allow"

[dependencies]
ggen-utils = { path = "../utils", version = "1.0.0" }
anyhow = "1.0"
tera = "1.0"
oxigraph = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
rayon = "1.8"
thiserror = "2.0"
log = "0.4.27"
rand = "0.9"
shacl_validation = "0.1"
srdf = "0.1"
tempfile = "3"
gray_matter = { version = "0.3.2", features = ["yaml"] }
Inflector = "0.11"
heck = "0.5"
regex = "1.10"
colored = "2.0"
toml = "0.9"
lru = "0.16"
ahash = "0.8"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.20", features = ["vendored-openssl"] }
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
semver = "1.0"
walkdir = "2.0"
diff = "0.1"
tracing = "0.1"
# Post-Quantum Cryptography (PQC) - NIST-approved algorithms
pqcrypto-mldsa = "0.1"  # ML-DSA (maintained replacement for Dilithium)
pqcrypto-traits = "0.3"
base64 = "0.22"
# LLM integration dependencies
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"

[features]
default = []
live-llm-tests = [] # Opt-in for OpenAI/Anthropic integration tests

[dev-dependencies]
tempfile = "3"
serde_json = "1"
